# alma-agentic

./: CONTRIBUTING.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
crates/alma-executor/: Cargo.toml  Dockerfile  docker-compose.yml
crates/alma-executor/src/: adapter.rs  config.rs  main.rs  service.rs  state.rs
crates/alma-executor/src/routes/: chat.rs  health.rs  mod.rs  prompt.rs  stream.rs
crates/alma-memory/: Cargo.toml
crates/alma-memory/src/: adapter.rs  lib.rs  types.rs
rig-integrations/rig-bedrock/: CHANGELOG.md
rig-integrations/rig-fastembed/: CHANGELOG.md
rig-integrations/rig-gemini-grpc/: CHANGELOG.md
rig-integrations/rig-helixdb/: CHANGELOG.md
rig-integrations/rig-lancedb/: CHANGELOG.md
rig-integrations/rig-milvus/: CHANGELOG.md
rig-integrations/rig-mongodb/: CHANGELOG.md
rig-integrations/rig-neo4j/: CHANGELOG.md
rig-integrations/rig-postgres/: CHANGELOG.md
rig-integrations/rig-qdrant/: CHANGELOG.md  Cargo.toml
rig-integrations/rig-s3vectors/: CHANGELOG.md
rig-integrations/rig-scylladb/: CHANGELOG.md
rig-integrations/rig-sqlite/: CHANGELOG.md
rig-integrations/rig-surrealdb/: CHANGELOG.md
rig-integrations/rig-vectorize/: CHANGELOG.md
rig-integrations/rig-vertexai/: CHANGELOG.md
rig/rig-core/: CHANGELOG.md  Cargo.toml
rig/rig-core/src/: lib.rs
rig/rig-core/src/client/: builder.rs
rig/rig-core/src/providers/: mod.rs
rig/rig-derive/: Cargo.toml
rig/rig-derive/src/: lib.rs
