[workspace]
resolver = "3"
members = [
    # Vendor — infraestructura heredada de Rig (fork congelado)
    "vendor/rig-core",
    "vendor/rig-derive",
    "vendor/rig-qdrant",
    # Crates — código propio Alma Labs
    "crates/alma-executor",
]

[workspace.lints.clippy]
dbg_macro = "forbid"
todo = "forbid"
unimplemented = "forbid"

[profile.release]
lto = true
opt-level = "s"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
as-any = "0.3.2"
assert_fs = "1.1.3"
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = "1.10.1"
convert_case = "0.10.0"
deluxe = "0.5.0"
deranged = "=0.4.0"
dotenvy = "0.15.7"
epub = "2.1.4"
futures = "0.3.31"
glob = "0.3.2"
httpmock = "0.7.0"
indoc = "2.0.6"
lopdf = "0.36.0"
mime_guess = "2.0.5"
nanoid = "0.4"
ordered-float = "5.0.0"
proc-macro2 = "1.0.95"
qdrant-client = { version = "1.14.0", default-features = false, features = [
    "serde",
] }
quick-xml = "0.39.2"
quote = "1.0.40"
rayon = "1.10.0"
reqwest = { version = "0.13", default-features = false }
url = "2.5"
schemars = "1.0.4"
serde = "1.0.219"
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
syn = "2.0.104"
term_size = "0.3.2"
testcontainers = "0.27"
textwrap = "0.16.2"
thiserror = "2.0.12"
tokio = "1.45.1"
tokio-test = "0.4.4"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
