[package]
name = "alma-executor"
version = "0.1.0"
edition = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "alma-executor"
path = "src/main.rs"

[dependencies]
rig-core = { path = "../../vendor/rig-core" }
axum = { version = "0.8", features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
futures = { workspace = true }
