[package]
name = "alma-memory"
version = "0.1.0"
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
qdrant-client = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
